- added command line option -t/--time to print out the total
  running time of the specified script
- ordered hash miss policy now receives the passed in key
  as-is prior to the string conversion.
- Sleep now parses command line arguments in a more flexible
  manner allowing different orders/combinations of switches.
- sleep.classpath value accepts either a ; or : as the path
  separator.

2.1-beta 22  (17 Apr 08)
===========
- added a new API to SleepUtils to generate a variable stack 
  from a java.util.Map.
- I/O bridge now reports a better error when a I/O handle is 
  expected as an argument but not received.
- added -Dsleep.assert property to enable/disable assertion
  statements.  
- updated SleepClosure#callClosure to use the current preferred
  function calling methods.  This enables closure calls from
  map, reduce, search, etc. to be traced and to count against
  the profiler statistics
- SleepUtils.runCode(Block, ...) now creates (and assumes the 
  responsibility for destroying) a local scope if none currently
  exists.
- extended the ordered hash (&ohash) concept to allow the
  implementation of a cache with a Sleep hash interface:

  -- &ohash orders keys in insertion order (no surprise here)
  -- added &ohasha to create a hash with keys kept in access order
  -- added setRemovalPolicy(%hash, &closure) to set a closure that
     determines wether the last element of the specified hash
     should be removed or not.  Arguments to the closure are:
     $1 = the hash, $2 = the key, and $3 = the value.
  -- added setMissPolicy(%hash, &closure) to a set closure that
     determines what value to use when a hash access misses.
     The closure is called with $1 = the hash and $2 = the key

  These features should enable better management of massive data 
  structures within Sleep.  Someone *cough*Marty*cough* will
  benefit greatly from this.
- sleep.runtime.ScalarHash implementations are now responsible 